<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo1_simple_dialog">Demo1-SIMPLE DIALOG</string>
    <string name="demo2_button_dialog">Demo2 BUTTONS DIALOG</string>
    <string name="textview">TextView</string>
    <string name="demo3_textInput_dialog">Demo3 TEXT INPUT DIALOG</string>
    <string name="EXERCISE3">EXERCISE 3</string>
    <string name="enter_some_text">Enter Some Text</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="demo4_date_picker_dialog">Demo4 DATEPICKER DIALOG</string>
    <string name="demo5_time_picker_dialog">Demo5 TIMEPICKER DIALOG</string>


</resources>